refactor project structure, start ast